<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/include_top"/>

        <LinearLayout
            android:layout_marginTop="@dimen/px40"
            android:layout_marginRight="@dimen/px50"
            android:layout_marginLeft="@dimen/px50"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:ems="5"
                android:gravity="center"
                style="@style/Tv12black"
                android:text="@string/cardholder"
                app:layout_constraintTop_toTopOf="parent" />

            <com.flyco.roundview.RoundFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_cardholder"
                app:rv_backgroundColor="@color/white_f4f4f4"
                app:rv_cornerRadius="@dimen/px10" >

                <EditText
                    android:id="@+id/et_name"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:padding="@dimen/px20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/please_name"
                    android:textSize="@dimen/size24" />

            </com.flyco.roundview.RoundFrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/px30"
            android:layout_marginRight="@dimen/px50"
            android:layout_marginLeft="@dimen/px50"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:ems="5"
                android:gravity="center"
                style="@style/Tv12black"
                android:text="@string/card_number"
                app:layout_constraintTop_toTopOf="parent" />

            <com.flyco.roundview.RoundFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_cardholder"
                app:rv_backgroundColor="@color/white_f4f4f4"
                app:rv_cornerRadius="@dimen/px10" >

                <EditText
                    android:id="@+id/et_number"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:inputType="number"
                    android:padding="@dimen/px20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/please_bank_number"
                    android:textSize="@dimen/size24" />

            </com.flyco.roundview.RoundFrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/px30"
            android:layout_marginRight="@dimen/px50"
            android:layout_marginLeft="@dimen/px50"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:ems="5"
                android:gravity="center"
                style="@style/Tv12black"
                android:text="@string/bank_name"
                app:layout_constraintTop_toTopOf="parent" />

            <com.flyco.roundview.RoundFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_cardholder"
                app:rv_backgroundColor="@color/white_f4f4f4"
                app:rv_cornerRadius="@dimen/px10" >

                <EditText
                    android:id="@+id/et_bank_name"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:padding="@dimen/px20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/please_bank_name"
                    android:textSize="@dimen/size24" />

            </com.flyco.roundview.RoundFrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/px30"
            android:layout_marginRight="@dimen/px50"
            android:layout_marginLeft="@dimen/px50"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:ems="5"
                android:gravity="center"
                style="@style/Tv12black"
                android:text="@string/bank_branch"
                app:layout_constraintTop_toTopOf="parent" />

            <com.flyco.roundview.RoundFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_cardholder"
                app:rv_backgroundColor="@color/white_f4f4f4"
                app:rv_cornerRadius="@dimen/px10" >

                <EditText
                    android:id="@+id/et_branch_name"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:padding="@dimen/px20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/please_branch_name"
                    android:textSize="@dimen/size24" />

            </com.flyco.roundview.RoundFrameLayout>


        </LinearLayout>

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_confirm"
            android:layout_marginTop="@dimen/px120"
            android:layout_marginRight="@dimen/px20"
            android:layout_marginLeft="@dimen/px20"
            android:layout_marginBottom="@dimen/px50"
            style="@style/RoundBlueTextView"
            android:text="@string/complete3"
            app:rv_backgroundColor="@color/reb_FE2701"
            app:rv_backgroundPressColor="@color/reb_C91E00"  />

    </LinearLayout>


</layout>