<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <com.fanwang.sg.weight.WithScrollGridView
                android:id="@+id/gv_collage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"
                app:layout_constraintTop_toBottomOf="@+id/tv_collage_title" />

             <TextView
                 android:id="@+id/tv_collage"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/gv_collage"
                 android:text="@string/successful_collage"
                 android:textColor="@color/reb_FE2701"
                 style="@style/Tv15black" />

            <TextView
                style="@style/Tv12black"
                android:layout_marginTop="@dimen/px10"
                android:text="@string/collage_rule3"
                android:textColor="@color/black_898989"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_collage" />

        </android.support.constraint.ConstraintLayout>

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_confirm"
            style="@style/RoundBlueTextView"
            android:layout_marginTop="@dimen/px70"
            android:layout_width="250dp"
            android:text="@string/home"
            app:rv_backgroundColor="@color/reb_FE2701"
            app:rv_cornerRadius="@dimen/px10"  />

    </LinearLayout>


</layout>