<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/fy_close"
        android:padding="@dimen/px30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@mipmap/home_icon_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>
    
    <TextView
        android:layout_marginTop="@dimen/px30"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/confirmation_payment"
        style="@style/Tv15black" />

    <View
        android:id="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/fy_close"
        style="@style/divider_1"/>

    <TextView
        android:id="@+id/tv_pay_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/px30"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:text="@string/pay_type"
        android:textColor="@color/black_A1A1A1"
        style="@style/Tv12black" />

    <View
        android:layout_marginTop="@dimen/px30"
        android:id="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_type"
        style="@style/divider_1"/>

    <ListView
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:id="@+id/listView"
        android:dividerHeight="@dimen/px2"
        android:divider="@color/white_f4f4f4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:textColor="@color/white"
        android:padding="@dimen/px20"
        android:gravity="center"
        android:layout_width="match_parent"
        android:id="@+id/tv_confirm"
        android:layout_marginTop="@dimen/px100"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        android:background="@color/blue_158EC2"
        android:text="@string/pay"
        style="@style/Tv15black" />

</android.support.constraint.ConstraintLayout>