<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tv_name"
        style="@style/Tv15black"
        android:layout_margin="@dimen/px30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_phone"
        style="@style/Tv15black"
        android:layout_margin="@dimen/px30"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/Tv15black"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/px30"
        android:layout_marginTop="@dimen/px10"
        android:paddingRight="@dimen/px30"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <View
        android:id="@+id/view"
        style="@style/divider_1"
        android:layout_marginTop="@dimen/px30"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/cb_"
        style="@style/Tv12black"
        android:background="@null"
        android:drawablePadding="@dimen/px30"
        android:padding="@dimen/px30"
        android:text="@string/default_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_edit"
        style="@style/Tv12black"
        android:drawableLeft="@mipmap/home_icon_edit"
        android:drawablePadding="@dimen/px10"
        android:text="@string/edit"
        android:padding="@dimen/px30"
        app:layout_constraintEnd_toStartOf="@id/tv_delete"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_delete"
        style="@style/Tv12black"
        android:padding="@dimen/px30"

        android:drawableLeft="@mipmap/home_icon_delete"
        android:drawablePadding="@dimen/px10"
        android:text="@string/delete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</android.support.constraint.ConstraintLayout>